more depreciation removes